@@ -21,10 +21,10 @@
 		</tr>
         <tr>
             <td style="padding: 10px 30px;">
-            	<div><img src="${defaultUrls.cdn_url}default_user_avatar_16.png" width="16" height="16" style="display: inline-block; vertical-align: top;"/>$!inviterName has invited you to collaborate on MyCollab.</div>
-                <p>Please, accept the invitation at:</p>
+            	<div><img src="${defaultUrls.cdn_url}default_user_avatar_16.png" width="16" height="16" style="display: inline-block; vertical-align: top;"/>$!inviterName さんよりあなたは、MyCollabに招待されました。</div>
+                <p>承認される場合は、下記アドレスをクリックしてください。</p>
 				#linkBlock( $!urlAccept )
-				<p>or decline it and cancel further reminders at:</p>
+				<p>拒否される場合、または心あたりのない場合は、下記アドレスをクリックしてください。</p>
 				#linkBlock( $!urlDeny )
             </td>
         </tr>
